feat: rename deploy and add image kind
