# internal/api/ctl/proto.gen.go
@@ -1,4 +1,4 @@
-// forester-controller v0.0.1 28e9924e15b97652b0c448932342fb45f671bb70
+// forester-controller v0.0.1 d26a5eee3495db4a3089d289a86d28d292a83e50
 // --
 // Code generated by webrpc-gen@v0.14.0-dev with golang generator. DO NOT EDIT.
 //
@@ -30,7 +30,7 @@ func WebRPCSchemaVersion() string {
 
 // Schema hash generated from your RIDL schema
 func WebRPCSchemaHash() string {
-	return "28e9924e15b97652b0c448932342fb45f671bb70"
+	return "d26a5eee3495db4a3089d289a86d28d292a83e50"
 }
 
 //
@@ -40,6 +40,7 @@ func WebRPCSchemaHash() string {
 type Image struct {
 	ID   int64  `json:"ID"`
 	Name string `json:"Name"`
+	Kind int16  `json:"Kind"`
 }
 
 type Appliance struct {
@@ -62,8 +63,6 @@ type System struct {
 	Name        string            `json:"Name"`
 	HwAddrs     []string          `json:"HwAddrs"`
 	Facts       map[string]string `json:"Facts"`
-	Acquired    bool              `json:"Acquired"`
-	AcquiredAt  time.Time         `json:"AcquiredAt"`
 	Comment     string            `json:"Comment"`
 	ApplianceID *int64            `json:"ApplianceID"`
 	Appliance   *Appliance        `json:"Appliance"`
@@ -104,8 +103,7 @@ type SystemService interface {
 	Register(ctx context.Context, system *NewSystem) error
 	Find(ctx context.Context, pattern string) (*System, error)
 	Rename(ctx context.Context, pattern string, newName string) error
-	Acquire(ctx context.Context, systemPattern string, imagePattern string, force bool, snippets []string, customSnippet string, ksOverride string, comment string, duration time.Time) error
-	Release(ctx context.Context, systemPattern string) error
+	Deploy(ctx context.Context, systemPattern string, imagePattern string, snippets []string, customSnippet string, ksOverride string, comment string, duration time.Time) error
 	List(ctx context.Context, limit int64, offset int64) ([]*System, error)
 	BootNetwork(ctx context.Context, systemPattern string) error
 	BootLocal(ctx context.Context, systemPattern string) error
@@ -140,8 +138,7 @@ var WebRPCServices = map[string][]string{
 		"Register",
 		"Find",
 		"Rename",
-		"Acquire",
-		"Release",
+		"Deploy",
 		"List",
 		"BootNetwork",
 		"BootLocal",
@@ -752,10 +749,8 @@ func (s *systemServiceServer) ServeHTTP(w http.ResponseWriter, r *http.Request) 
 		handler = s.serveFindJSON
 	case "/rpc/SystemService/Rename":
 		handler = s.serveRenameJSON
-	case "/rpc/SystemService/Acquire":
-		handler = s.serveAcquireJSON
-	case "/rpc/SystemService/Release":
-		handler = s.serveReleaseJSON
+	case "/rpc/SystemService/Deploy":
+		handler = s.serveDeployJSON
 	case "/rpc/SystemService/List":
 		handler = s.serveListJSON
 	case "/rpc/SystemService/BootNetwork":
@@ -906,8 +901,8 @@ func (s *systemServiceServer) serveRenameJSON(ctx context.Context, w http.Respon
 	w.Write([]byte("{}"))
 }
 
-func (s *systemServiceServer) serveAcquireJSON(ctx context.Context, w http.ResponseWriter, r *http.Request) {
-	ctx = context.WithValue(ctx, MethodNameCtxKey, "Acquire")
+func (s *systemServiceServer) serveDeployJSON(ctx context.Context, w http.ResponseWriter, r *http.Request) {
+	ctx = context.WithValue(ctx, MethodNameCtxKey, "Deploy")
 
 	reqBody, err := io.ReadAll(r.Body)
 	if err != nil {
@@ -919,12 +914,11 @@ func (s *systemServiceServer) serveAcquireJSON(ctx context.Context, w http.Respo
 	reqPayload := struct {
 		Arg0 string    `json:"systemPattern"`
 		Arg1 string    `json:"imagePattern"`
-		Arg2 bool      `json:"force"`
-		Arg3 []string  `json:"snippets"`
-		Arg4 string    `json:"customSnippet"`
-		Arg5 string    `json:"ksOverride"`
-		Arg6 string    `json:"comment"`
-		Arg7 time.Time `json:"duration"`
+		Arg2 []string  `json:"snippets"`
+		Arg3 string    `json:"customSnippet"`
+		Arg4 string    `json:"ksOverride"`
+		Arg5 string    `json:"comment"`
+		Arg6 time.Time `json:"duration"`
 	}{}
 	if err := json.Unmarshal(reqBody, &reqPayload); err != nil {
 		s.sendErrorJSON(w, r, ErrWebrpcBadRequest.WithCause(fmt.Errorf("failed to unmarshal request data: %w", err)))
@@ -932,41 +926,7 @@ func (s *systemServiceServer) serveAcquireJSON(ctx context.Context, w http.Respo
 	}
 
 	// Call service method implementation.
-	err = s.SystemService.Acquire(ctx, reqPayload.Arg0, reqPayload.Arg1, reqPayload.Arg2, reqPayload.Arg3, reqPayload.Arg4, reqPayload.Arg5, reqPayload.Arg6, reqPayload.Arg7)
-	if err != nil {
-		rpcErr, ok := err.(WebRPCError)
-		if !ok {
-			rpcErr = ErrWebrpcEndpoint.WithCause(err)
-		}
-		s.sendErrorJSON(w, r, rpcErr)
-		return
-	}
-
-	w.Header().Set("Content-Type", "application/json")
-	w.WriteHeader(http.StatusOK)
-	w.Write([]byte("{}"))
-}
-
-func (s *systemServiceServer) serveReleaseJSON(ctx context.Context, w http.ResponseWriter, r *http.Request) {
-	ctx = context.WithValue(ctx, MethodNameCtxKey, "Release")
-
-	reqBody, err := io.ReadAll(r.Body)
-	if err != nil {
-		s.sendErrorJSON(w, r, ErrWebrpcBadRequest.WithCause(fmt.Errorf("failed to read request data: %w", err)))
-		return
-	}
-	defer r.Body.Close()
-
-	reqPayload := struct {
-		Arg0 string `json:"systemPattern"`
-	}{}
-	if err := json.Unmarshal(reqBody, &reqPayload); err != nil {
-		s.sendErrorJSON(w, r, ErrWebrpcBadRequest.WithCause(fmt.Errorf("failed to unmarshal request data: %w", err)))
-		return
-	}
-
-	// Call service method implementation.
-	err = s.SystemService.Release(ctx, reqPayload.Arg0)
+	err = s.SystemService.Deploy(ctx, reqPayload.Arg0, reqPayload.Arg1, reqPayload.Arg2, reqPayload.Arg3, reqPayload.Arg4, reqPayload.Arg5, reqPayload.Arg6)
 	if err != nil {
 		rpcErr, ok := err.(WebRPCError)
 		if !ok {
@@ -1633,17 +1593,16 @@ func (c *applianceServiceClient) Delete(ctx context.Context, name string) error 
 
 type systemServiceClient struct {
 	client HTTPClient
-	urls   [10]string
+	urls   [9]string
 }
 
 func NewSystemServiceClient(addr string, client HTTPClient) SystemService {
 	prefix := urlBase(addr) + SystemServicePathPrefix
-	urls := [10]string{
+	urls := [9]string{
 		prefix + "Register",
 		prefix + "Find",
 		prefix + "Rename",
-		prefix + "Acquire",
-		prefix + "Release",
+		prefix + "Deploy",
 		prefix + "List",
 		prefix + "BootNetwork",
 		prefix + "BootLocal",
@@ -1685,26 +1644,17 @@ func (c *systemServiceClient) Rename(ctx context.Context, pattern string, newNam
 	return err
 }
 
-func (c *systemServiceClient) Acquire(ctx context.Context, systemPattern string, imagePattern string, force bool, snippets []string, customSnippet string, ksOverride string, comment string, duration time.Time) error {
+func (c *systemServiceClient) Deploy(ctx context.Context, systemPattern string, imagePattern string, snippets []string, customSnippet string, ksOverride string, comment string, duration time.Time) error {
 	in := struct {
 		Arg0 string    `json:"systemPattern"`
 		Arg1 string    `json:"imagePattern"`
-		Arg2 bool      `json:"force"`
-		Arg3 []string  `json:"snippets"`
-		Arg4 string    `json:"customSnippet"`
-		Arg5 string    `json:"ksOverride"`
-		Arg6 string    `json:"comment"`
-		Arg7 time.Time `json:"duration"`
-	}{systemPattern, imagePattern, force, snippets, customSnippet, ksOverride, comment, duration}
+		Arg2 []string  `json:"snippets"`
+		Arg3 string    `json:"customSnippet"`
+		Arg4 string    `json:"ksOverride"`
+		Arg5 string    `json:"comment"`
+		Arg6 time.Time `json:"duration"`
+	}{systemPattern, imagePattern, snippets, customSnippet, ksOverride, comment, duration}
 	err := doJSONRequest(ctx, c.client, c.urls[3], in, nil)
-	return err
-}
-
-func (c *systemServiceClient) Release(ctx context.Context, systemPattern string) error {
-	in := struct {
-		Arg0 string `json:"systemPattern"`
-	}{systemPattern}
-	err := doJSONRequest(ctx, c.client, c.urls[4], in, nil)
 	return err
 }
 
@@ -1717,7 +1667,7 @@ func (c *systemServiceClient) List(ctx context.Context, limit int64, offset int6
 		Ret0 []*System `json:"systems"`
 	}{}
 
-	err := doJSONRequest(ctx, c.client, c.urls[5], in, &out)
+	err := doJSONRequest(ctx, c.client, c.urls[4], in, &out)
 	return out.Ret0, err
 }
 
@@ -1725,7 +1675,7 @@ func (c *systemServiceClient) BootNetwork(ctx context.Context, systemPattern str
 	in := struct {
 		Arg0 string `json:"systemPattern"`
 	}{systemPattern}
-	err := doJSONRequest(ctx, c.client, c.urls[6], in, nil)
+	err := doJSONRequest(ctx, c.client, c.urls[5], in, nil)
 	return err
 }
 
@@ -1733,7 +1683,7 @@ func (c *systemServiceClient) BootLocal(ctx context.Context, systemPattern strin
 	in := struct {
 		Arg0 string `json:"systemPattern"`
 	}{systemPattern}
-	err := doJSONRequest(ctx, c.client, c.urls[7], in, nil)
+	err := doJSONRequest(ctx, c.client, c.urls[6], in, nil)
 	return err
 }
 
@@ -1745,7 +1695,7 @@ func (c *systemServiceClient) Kickstart(ctx context.Context, systemPattern strin
 		Ret0 string `json:"contents"`
 	}{}
 
-	err := doJSONRequest(ctx, c.client, c.urls[8], in, &out)
+	err := doJSONRequest(ctx, c.client, c.urls[7], in, &out)
 	return out.Ret0, err
 }
 
@@ -1757,7 +1707,7 @@ func (c *systemServiceClient) Logs(ctx context.Context, systemPattern string) ([
 		Ret0 []*LogEntry `json:"logs"`
 	}{}
 
-	err := doJSONRequest(ctx, c.client, c.urls[9], in, &out)
+	err := doJSONRequest(ctx, c.client, c.urls[8], in, &out)
 	return out.Ret0, err
 }
 
