# internal/model/system.go
@@ -3,7 +3,6 @@ package model
 import (
 	"net"
 	"strings"
-	"time"
 )
 
 type System struct {
@@ -27,13 +26,6 @@ type System struct {
 
 	// Details about the system
 	Facts Facts `db:"facts"`
-
-	// Whether a system is owned by someone
-	Acquired bool `db:"acquired"`
-
-	// AcquiredAt is time when system was acquired. Can be "0001-01-01 00:00:00 +0000 UTC"
-	// for a system that way not acquired yet.
-	AcquiredAt time.Time `db:"acquired_at"`
 
 	// Comment, can be blank.
 	Comment string `db:"comment"`
