# openapi.gen.yaml
@@ -1,4 +1,4 @@
-# forester-controller v0.0.1 28e9924e15b97652b0c448932342fb45f671bb70
+# forester-controller v0.0.1 d26a5eee3495db4a3089d289a86d28d292a83e50
 # --
 # Code generated by webrpc-gen@v0.14.0-dev with github.com/webrpc/gen-openapi@v0.11.3 generator; DO NOT EDIT
 # 
@@ -193,11 +193,14 @@ components:
       required:
         - ID
         - Name
+        - Kind
       properties:
         ID:
           type: number
         Name:
           type: string
+        Kind:
+          type: number
     Appliance:
       type: object
       required:
@@ -244,8 +247,6 @@ components:
         - Name
         - HwAddrs
         - Facts
-        - Acquired
-        - AcquiredAt
         - Comment
       properties:
         ID:
@@ -262,10 +263,6 @@ components:
           description: 'map<string,string>'
           additionalProperties:
             type: string
-        Acquired:
-          type: boolean
-        AcquiredAt:
-          type: string
         Comment:
           type: string
         ApplianceID:
@@ -429,15 +426,13 @@ components:
           type: string
         newName:
           type: string
-    SystemService_Acquire_Request:
+    SystemService_Deploy_Request:
       type: object
       properties:
         systemPattern:
           type: string
         imagePattern:
           type: string
-        force:
-          type: boolean
         snippets:
           type: array
           description: '[]string'
@@ -450,11 +445,6 @@ components:
         comment:
           type: string
         duration:
-          type: string
-    SystemService_Release_Request:
-      type: object
-      properties:
-        systemPattern:
           type: string
     SystemService_List_Request:
       type: object
@@ -492,9 +482,7 @@ components:
           $ref: '#/components/schemas/System'
     SystemService_Rename_Response:
       type: object
-    SystemService_Acquire_Response:
-      type: object
-    SystemService_Release_Response:
+    SystemService_Deploy_Response:
       type: object
     SystemService_List_Response:
       type: object
@@ -1017,54 +1005,20 @@ paths:
                 - $ref: '#/components/schemas/ErrorWebrpcBadResponse'
                 - $ref: '#/components/schemas/ErrorWebrpcServerPanic'
                 - $ref: '#/components/schemas/ErrorWebrpcInternalError'
-  /rpc/SystemService/Acquire:
+  /rpc/SystemService/Deploy:
     post:
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/SystemService_Acquire_Request'
+              $ref: '#/components/schemas/SystemService_Deploy_Request'
       responses:
         '200':
           description: OK
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/SystemService_Acquire_Response'
-        '4XX':
-          description: Client error
-          content:
-            application/json:
-              schema:
-                oneOf:
-                - $ref: '#/components/schemas/ErrorWebrpcEndpoint'
-                - $ref: '#/components/schemas/ErrorWebrpcRequestFailed'
-                - $ref: '#/components/schemas/ErrorWebrpcBadRoute'
-                - $ref: '#/components/schemas/ErrorWebrpcBadMethod'
-                - $ref: '#/components/schemas/ErrorWebrpcBadRequest'
-        '5XX':
-          description: Server error
-          content:
-            application/json:
-              schema:
-                oneOf:
-                - $ref: '#/components/schemas/ErrorWebrpcBadResponse'
-                - $ref: '#/components/schemas/ErrorWebrpcServerPanic'
-                - $ref: '#/components/schemas/ErrorWebrpcInternalError'
-  /rpc/SystemService/Release:
-    post:
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/SystemService_Release_Request'
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/SystemService_Release_Response'
+                $ref: '#/components/schemas/SystemService_Deploy_Response'
         '4XX':
           description: Client error
           content:
